Fix main menu child elems height on ie11, fix centering of .skillBackground on ie11

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -254,6 +254,7 @@ ul.sub-menu.toggled-on li {
 
 	.main-navigation,
 	.main-navigation.toggled {
+		height: 0;
 		position: relative;
 		min-height: 3.5em;
 		margin: 0 auto;
