--- a/sass/sections/content-skills.scss
+++ b/sass/sections/content-skills.scss
@@ -5,6 +5,11 @@
   opacity: 0.15;
   max-width: 250px;
   display: none;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
   // left: calc(50% - 125px);
   // top: calc(50% - 125px);
 
