--- a/sass/sections/taxonomy-skill_tag.scss
+++ b/sass/sections/taxonomy-skill_tag.scss
@@ -34,7 +34,7 @@
     font-weight: bold;
   }
   &__image {
-
+    width: 100%;
     padding: 0.5em;
     // border-radius: 50%;
     &_square {
